...
    onEmailChanged: (String) -> Unit,
    onSubscribeClicked: () -> Unit
) {
    Column(
        modifier = Modifier
            .fillMaxWidth()
            .testTag("subscribe"),
        horizontalAlignment = Alignment.CenterHorizontally
    ) {
        Spacer(modifier = Modifier.height(24.dp))
        Text(
            text = stringResource(id = R.string.subscribe_title),
            fontWeight = FontWeight.Bold
...
                imeAction = ImeAction.Done
            ),
            label = { Text(stringResource(id = R.string.email_label)) },
            placeholder = { Text(stringResource(id = R.string.email_placeholder)) },
            modifier = Modifier
                .fillMaxWidth()
                .testTag("email_input"),
            singleLine = true
        )

        Button(
            onClick = onSubscribeClicked,
            modifier = Modifier.fillMaxWidth(),
...
